--- a/docs/snippets/angular/your-component-with-decorator.ts.mdx
+++ b/docs/snippets/angular/your-component-with-decorator.ts.mdx
@@ -4,6 +4,7 @@
 import { Meta } from '@storybook/angular';
 
 export default {
+  title: 'YourComponent',
   component: YourComponent,
   decorators: [
     (storyFunc) => {
