--- a/docs/snippets/angular/button-story-decorator.ts.mdx
+++ b/docs/snippets/angular/button-story-decorator.ts.mdx
@@ -1,27 +1,23 @@
 ```ts
 // button.stories.ts
+import { Meta, Story, templateDecorator, componentDecorator } from '@storybook/angular';
 
 import { ButtonComponent } from './button.component';
+import { ParentComponent } from './parent.component'; // ParentComponent contains ng-content
 
 export default {
   title: 'Example/Button',
   component: ButtonComponent,
-};
-
-// Note: To see the decorator applied to your component's stories you'll need to include the template key with the component's selector.
+} as Meta;
 
 export const Primary: Story<ButtonComponent> = () => ({
   template: '<app-button label="Submit"></app-button>',
 });
+Primary.decorators = [templateDecorator((stroy) => `<div style="margin: 3em">${story}</div>`)];
 
-Primary.decorators = [
-  (storyFunc) => {
-    const story = storyFunc();
+export const InsideParent: Story<ButtonComponent> = () => ({
+  template: '<app-button label="Submit"></app-button>',
+});
+InsideParent.decorators = [componentDecorator(ParentComponent];
 
-    return {
-      ...story,
-      template: `<div style="margin: 3em">${story.template}</div>`,
-    };
-  },
-];
 ```
