--- a/docs/snippets/angular/your-component-with-decorator.ts.mdx
+++ b/docs/snippets/angular/your-component-with-decorator.ts.mdx
@@ -1,20 +1,11 @@
 ```ts
 // your-component.stories.ts
 
-import { Meta } from '@storybook/angular';
+import { Meta, templateDecorator } from '@storybook/angular';
 
 export default {
   title: 'YourComponent',
   component: YourComponent,
-  decorators: [
-    (storyFunc) => {
-      const story = storyFunc();
-
-      return {
-        ...story,
-        template: `<div style="margin: 3em">${story.template}</div>`,
-      };
-    },
-  ],
+  decorators: [templateDecorator((stroy) => `<div style="margin: 3em">${story}</div>`)],
 } as Meta;
 ```
